correction text-align

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header
 	.left, .right{
 		width: 100%;
 		padding: 50px 0% 20px 0%;
-		text-align: center justify;
+		text-align: center;
 	}
 	.col3 .col7
 	{
